--- a/src/app/views/home/post-list/post-list.component.html
+++ b/src/app/views/home/post-list/post-list.component.html
@@ -1,1 +1,64 @@
-<p>post-list works!</p>
+<div id='content'>
+    <div id='row'>
+        <div class='card'>
+            <div>
+                <img src="https://static.biologianet.com/2020/03/covid.jpg" alt='Imagem Covid'>
+            </div>
+            <div class='card-container'>
+                <h3>Coronavírus: Como a doença é transmitida?</h3>
+                <h4>Saiba o que é o coronavírus, em quanto tempo a doença pode se manifestar e quais são os principais</h4>
+                <a href="#">Ler mais</a>
+            </div>
+        </div>
+        <div class='card'>
+            <div>
+                <img src="https://static.biologianet.com/2020/03/covid.jpg" alt='Imagem Covid'>
+            </div>
+            <div class='card-container'>
+                <h3>Coronavírus: Como a doença é transmitida?</h3>
+                <h4>Saiba o que é o coronavírus, em quanto tempo a doença pode se manifestar e quais são os principais</h4>
+                <a href="#">Ler mais</a>
+            </div>
+        </div>
+        <div class='card'>
+            <div>
+                <img src="https://static.biologianet.com/2020/03/covid.jpg" alt='Imagem Covid'>
+            </div>
+            <div class='card-container'>
+                <h3>Coronavírus: Como a doença é transmitida?</h3>
+                <h4>Saiba o que é o coronavírus, em quanto tempo a doença pode se manifestar e quais são os principais</h4>
+                <a href="#">Ler mais</a>
+            </div>
+        </div>
+        <div class='card'>
+            <div>
+                <img src="https://static.biologianet.com/2020/03/covid.jpg" alt='Imagem Covid'>
+            </div>
+            <div class='card-container'>
+                <h3>Coronavírus: Como a doença é transmitida?</h3>
+                <h4>Saiba o que é o coronavírus, em quanto tempo a doença pode se manifestar e quais são os principais</h4>
+                <a href="#">Ler mais</a>
+            </div>
+        </div>
+        <div class='card'>
+            <div>
+                <img src="https://static.biologianet.com/2020/03/covid.jpg" alt='Imagem Covid'>
+            </div>
+            <div class='card-container'>
+                <h3>Coronavírus: Como a doença é transmitida?</h3>
+                <h4>Saiba o que é o coronavírus, em quanto tempo a doença pode se manifestar e quais são os principais</h4>
+                <a href="#">Ler mais</a>
+            </div>
+        </div>
+        <div class='card'>
+            <div>
+                <img src="https://static.biologianet.com/2020/03/covid.jpg" alt='Imagem Covid'>
+            </div>
+            <div class='card-container'>
+                <h3>Coronavírus: Como a doença é transmitida?</h3>
+                <h4>Saiba o que é o coronavírus, em quanto tempo a doença pode se manifestar e quais são os principais</h4>
+                <a href="#">Ler mais</a>
+            </div>
+        </div>
+    </div>
+</div>
