--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,2 +1,5 @@
 <app-header></app-header>
-<app-post-list></app-post-list>
+<div id='main-container'>
+    <app-post-list></app-post-list>
+    <app-aside></app-aside>
+</div>
